fix gitignore